Update issue report template with bug label
Added a label for bug type and updated the issue report template.

--- a/.github/ISSUE_TEMPLATE/01_issue_report.yml
+++ b/.github/ISSUE_TEMPLATE/01_issue_report.yml
@@ -1,6 +1,7 @@
 ---
 name: 🐛 Issue Report
 description: "File a issue report, if you've discovered a problem in an Umbraco Integration."
+labels: ["type/bug"]
 body:
 - type: dropdown
   id: integration
@@ -68,4 +69,5 @@ body:
     placeholder: >
       Describe the intended/desired outcome after you did the steps mentioned.
       
+
       Describe the behaviour of the bug
